crates/solidity/testing/snapshots/bindings_output/using/global/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs). Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[counter.sol:1:1]
   │
 1 │ ╭─▶ struct Counter {
   ┆ ┆   
 8 │ ├─▶ 
   │ │      
   │ ╰────── Error occurred here.
───╯
References and definitions: 
Definiens: 
References and definitions: 
   ╭─[main.sol:1:1]
   │
 1 │ import {Counter} from "counter.sol";
   │         ───┬───  
   │            ╰───── name: 1
   │            │     
   │            ╰───── unresolved
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 2
 4 │     function test(Counter memory c) public {
   │              ──┬─ ───┬───        ┬  
   │                ╰──────────────────── name: 3
   │                      │           │  
   │                      ╰────────────── ref: 1
   │                                  │  
   │                                  ╰── name: 4
 5 │         c.increment();
   │         ┬ ────┬────  
   │         ╰──────────── ref: 4
   │               │      
   │               ╰────── unresolved
───╯
Definiens: 
   ╭─[main.sol:1:1]
   │
 1 │ │     import {Counter} from "counter.sol";
   │ │             ───┬───  
   │ │                ╰───── definiens: 1
 2 │ ╭───▶ 
   ┆ ┆ ┆   
 4 │ │ ╭─▶     function test(Counter memory c) public {
   │ │ │                     ────────┬───────  
   │ │ │                             ╰───────── definiens: 4
   ┆ ┆ ┆   
 6 │ │ ├─▶     }
   │ │ │           
   │ │ ╰─────────── definiens: 3
 7 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 2
───╯
